# shared-ev-chargers

./: .env-example  .gitignore  README.md  docker-compose.beta.yaml  docker-compose.dev.yaml  docker-compose.yaml  seed_data.py
fastapi-backend/: .env-example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  shared_ev.db
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 49f8fe78ada2_final_db_schema.py  7aceef3152bb_final_schema.py  a80f3e7d07ec_add_price_per_kwh_to_charge_logs.py  b77b25f540e7_initial_migration.py  d24acf2922f5_final_added_last_updated_to_charge_logs.py  ef0e08525802_add_is_enabled.py
fastapi-backend/app/: __init__.py  config.py  database.py  main.py
fastapi-backend/app/api/v1/: charger.py  connector.py  deps.py  internal.py  login.py  rfid.py  transaction.py  user.py
fastapi-backend/app/core/: config.py  security.py
fastapi-backend/app/db/: schema.py
fastapi-backend/app/models/: __init__.py  charge-log.py  charge_log.py  charger.py  connector.py  connector_type.py  enums.py  reservation.py  rfid.py  user.py
fastapi-backend/app/routers/: __init__.py  charger.py  user.py
fastapi-backend/app/schemas/: charge_log.py  charger.py  connector.py  connector_type.py  reservation.py  rfid.py  user.py
fastapi-backend/app/services/: charger_service.py  connector_service.py  rfid_service.py  transaction_service.py  user_service.py
fastapi-backend/tests/: test_password_change.py  test_role_change.py
fastapi-backend/tests/api/v1/: test_balance_deduction.py  test_charger.py  (+9 more)
(+69 files in other folders)
